# batch-tn

./: README.md  batch_contract.py  demo.ipynb  pyproject.toml
batch_tn/: __init__.py  batch.py
batchtn/: __init__.py
tests/: test_batch_einsum.py
